# substrate_kitties_v2

pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
